--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Header</title>
+    <link rel="stylesheet" href="css/header.css">
 </head>
+
 <body>
-    
+    <div class="header-main-wrap">
+        <h1 class=>
+            <a href="" class="typewrite" data-period="2000"
+                data-type='[ "Druga laboratorijska vježba", "SQL umetanje (SQL Injection)", "Loša autentifikacija (Broken Authentication)" ]'>
+                <span class="wrap"></span>
+            </a>
+        </h1>
+    </div>
+   
+    <script src="scripts/header.js"></script>
 </body>
+
 </html>
