--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Footer</title>
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-    
+    <div class="footer-backgrount-repeating-img"></div>
 </body>
 </html>
