pocetak drugog zadatka, i popravak backenda

--- a/views/components/SQLInjection.ejs
+++ b/views/components/SQLInjection.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SQLInjection</title><link rel="stylesheet" href="css/SQLInjection.css">
+    <title>SQLInjection</title>
+    <link rel="stylesheet" href="css/SQLInjection.css">
 </head>
 
 <body>
@@ -22,8 +23,8 @@
             <button type="button" onclick="submitForm()" id="form-submit-button">Prijavi se</button>
         </form>    
     </div>
-    <script src="scripts/SQLInjection.js"></script>
     <p>Upute: <label>bla bla</label></p> 
+    <script src="scripts/SQLInjection.js"></script>
 </body>
 
 </html>
