--- a/public/css/index.css
+++ b/public/css/index.css
@@ -130,4 +130,25 @@ input{
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    transition: display 0.2s, opacity 0.4s;
+}
+.content-task1{
+    display: none;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    transition: display 0.2s, opacity 0.4s;
+}
+.content-task2{
+    display: none;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    transition: display 0.2s, opacity 0.4s;
+}
+.fade-out {
+    opacity: 0;
+}
+.add-display {
+    display: flex;
 }
