--- a/views/components/brokenAuth.ejs
+++ b/views/components/brokenAuth.ejs
@@ -18,7 +18,7 @@
             <label for="password">Lozinka:</label>
             <input type="password" id="brokenAuth-form-password" name="password" required>
 
-            <button type="button" onclick="submitForm()" id="brokenAuth-form-submit-button">Prijavi se</button>
+            <button type="button" onclick="submitForm2()" id="brokenAuth-form-submit-button">Registriraj se</button>
         </form>    
     </div>
     <p>Upute: <label>bla bla</label></p>
