--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <div class="header-main-wrap">
         <h1 class=>
             <a href="" class="typewrite" data-period="2000"
-                data-type='[ "Druga laboratorijska vježba", "SQL umetanje (SQL Injection)", "Loša autentifikacija (Broken Authentication)" ]'>
+                data-type='[ "Druga laboratorijska vježba", "SQL umetanje (SQL Injection)", "Loša autentifikacija (Broken Authentication)", "✍️🔐🔬" ]'>
                 <span class="wrap"></span>
             </a>
         </h1>
