--- a/views/components/SQLInjection.ejs
+++ b/views/components/SQLInjection.ejs
@@ -14,16 +14,16 @@
         <form action="" id="SQLInjection-form">
             <button type="button" id="form-protect-button" onclick="protectionClick()">Zaštićeno</button>
 
-            <label for="username">Korisničko ime:</label>
+            <label for="username" class="remove-margin-left">Korisničko ime:</label>
             <input type="text" id="SQLInjection-form-username" name="username" required>
 
-            <label for="password">Lozinka:</label>
+            <label for="password" class="remove-margin-left">Lozinka:</label>
             <input type="password" id="SQLInjection-form-password" name="password" required>
 
             <button type="button" onclick="submitForm()" id="form-submit-button">Prijavi se</button>
         </form>    
     </div>
-    <p>Upute: <label>bla bla</label></p> 
+    <p>Upute: <label>U ne zaštićenom načinu rada moguće je dobiti uspješnu autentifikaciju s korištenjem vrijednost: ' OR '1'='1 🔑 </label></p> 
     <script src="scripts/SQLInjection.js"></script>
 </body>
 
