--- a/views/components/SQLInjection.ejs
+++ b/views/components/SQLInjection.ejs
@@ -21,9 +21,11 @@
             <input type="password" id="SQLInjection-form-password" name="password" required>
 
             <button type="button" onclick="submitForm()" id="form-submit-button">Prijavi se</button>
-        </form>    
+        </form>
     </div>
-    <p>Upute: <label>U ne zaštićenom načinu rada moguće je dobiti uspješnu autentifikaciju s korištenjem vrijednost: ' OR '1'='1 🔑 </label></p> 
+    <p>Upute: <label>U ne zaštićenom načinu rada moguće je dobiti uspješnu autentifikaciju s korištenjem vrijednost: '
+            OR '1'='1 🔑 </label>
+        <label>Unaprijed generirani korisnik u bazi podataka 🙍‍♂️(Korisničko ime: test, Lozinka: test)</label></p>
     <script src="scripts/SQLInjection.js"></script>
 </body>
 
