--- a/views/components/brokenAuth.ejs
+++ b/views/components/brokenAuth.ejs
@@ -28,10 +28,10 @@
 
     </div>
     <p>Upute: <label>Implementirane su sljedeće sigurnosne mjere za sprječavanje loše autentifikacije na primjeru registracije u sustav. 📜</label><label>
-        Restrikcije na sadržaj lozinke( mora imati veliko slovo i znamenku, biti barem 9 znamenaka karaktera dugačka i imati jedan specijalni znak). 
-        Dodatno je implementiran CAPTCHA za sprječavanje bot napada. 
+        <label class="remove-margin-left color-1">Restrikcije na sadržaj lozinke</label>( mora imati veliko slovo i znamenku, biti barem 9 znamenaka karaktera dugačka i imati jedan specijalni znak). 
+        Dodatno je implementiran <label class="remove-margin-left color-1">CAPTCHA</label> za sprječavanje bot napada. 
         Uz prethodno spomenute restrikcije na lozinku također je primijenjeno pravilo zabrane korištenja lozinki korištenja
-        nisu sigurne, odnosno nalaze se u sustavu pwnedpasswords.com.</label><label> Korištenje je očekivano, pomoć pri odabiru lozinke koja zadovoljava restrikcije i 
+        nisu sigurne, odnosno nalaze se u sustavu <label class="remove-margin-left color-1">pwnedpasswords.com</label>.</label><label> Korištenje je očekivano, pomoć pri odabiru lozinke koja zadovoljava restrikcije i 
         nalazi se u sustavu pwnedpasswords : Password1! 🔓.
     </label></p>
     <script src="scripts/brokenAuth.js"></script>
