--- a/public/css/brokenAuth.css
+++ b/public/css/brokenAuth.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    transition: display 1s ease;
 }
 .brokenAuth-title{
     text-align: center;
@@ -33,6 +34,7 @@
     color: #0DDEB8;
 }
 #captchaContainer{
+    transition: display 1s ease;
     background-color: white;
     margin: 10px;
 }
@@ -50,5 +52,9 @@ p{
     flex-flow: column;
     justify-content: start;
     align-items: start;
+    transition: color 0.4s, opacity 0.3s;
     
+}
+.color-1{
+    color: #0DDEB8;
 }
